--- a/angular.json
+++ b/angular.json
@@ -108,7 +108,12 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
+            "scripts": ["src/app/mock/GoogleMock.js"]
           }
         }
       }
